--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                         <div class="progress">
                             <div class="progress-fill" style="width: 100%; background-color:#f16529;"></div>
                         </div>
-                        <small>100%</small>
+                        <small>20%</small>
                     </li>
                     <br><br>
                     
                     <li class="skill-item">
                         <img src="assets/css-logo.png" alt="CSS Logo" width="40" height="40">
                         <div style="flex: 1;">
-                        <div style="font-weight: bold;">HTML</div>
+                        <div style="font-weight: bold;">CSS</div>
                         <div class="progress">
                             <div class="progress-fill" style="width: 100%; background-color:blue;"></div>
                         </div>
-                        <small>100%</small>
+                        <small>20%</small>
                     </li><br><br>
 
                     <li class="skill-item">
@@ -92,7 +92,7 @@
                         <div class="progress">
                             <div class="progress-fill" style="width: 50%; background-color: yellow;"></div>
                         </div>
-                        <small>50%</small>
+                        <small>10%</small>
                     </li><br><br>
                     
                     <li class="skill-item">
@@ -102,7 +102,7 @@
                         <div class="progress">
                             <div class="progress-fill" style="width: 50%; background-color: black"></div>
                         </div> 
-                        <small>50%</small> 
+                        <small>10%</small> 
                     </li>
                 </ul>
         </aside>
