menambahkan gambar, memperbaiki code html & css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header class="header">
         <h3>Zahratunnisa</h3>
 
+        <!-- BURGER MENU CSS-ONLY -->
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <!-- END BURGER -->
+
         <nav class="navbar">
             <span><a href="/index.html">Home</a></span>
             <span><a href="/pages/aboutmemore.html">About Me</a></span>
@@ -17,14 +26,13 @@
             <span><a href="/pages/contact.html">Reach me On</a></span>
         </nav>
     </header>
-    <h2>Latest Post</h2>
 
     <section class="box-container">
       
       <!--Box di sebelah kiri-->
       <div class="left-column">
         <div class="box1">
-        <img src="assets/Tempat-wisata-di-Bali.jpg" alt="Bali">
+        <img src="assets/littleme.jpg" alt="Zahratunnisa">
           <div class="box1-content">
             <h3>About Me</h3>
             <p>My name is Zahratunnisa. I graduated in Chemical Engineering in 2022 from Mulawarman University in Samarinda. I have worked for approximately three years in a swasta company in Balikpapan as a laboratory analyst. In the midst of my career, I discovered a new passion in the IT world. <br>
@@ -34,7 +42,7 @@
         </div>
       
         <div class="box1">
-        <img src="assets/travel.jpg" alt="Travel Image">
+        <img src="assets/iconprojec.png" alt="My Project">
           <div class="box1-content">
              <h3>My Project</h3>
               <p>I already finish some project like simple website. <a href="/pages/myproject.html" >You can see on --></a>
@@ -46,7 +54,7 @@
       <!--Box di sebelah kanan-->
       <aside class="right-column">
         <div class="box2">
-          <img src="assets/travel.jpg" alt="Travel Image">
+          <img src="assets/connection.png" alt="Connection">
           <div class="box2-content">
             <h3>Reach Me On</h3>
             <p>Let's make connection! Let's work together!
@@ -55,9 +63,9 @@
           </div>
         </div>
 
-        <div class="box2">
-          <img src="assets/travel.jpg" alt="Travel Image">
-          <h3>Ecotic Lombok</h3>
+        <div class="box3">
+          <img src="assets/travel.jpg" alt="Unknown">
+          <h3>Unknown</h3>
           <p>Discover the serene beauty of the ocean and golden sands.</p>
         </div>
       </aside>
