--- a/pages/myproject.html
+++ b/pages/myproject.html
@@ -13,6 +13,15 @@
     <header class="header">
         <h3>Zahratunnisa</h3>
 
+        <!-- BURGER MENU CSS-ONLY -->
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <!-- END BURGER -->
+
         <nav class="navbar">
             <span><a href="/index.html">Home</a></span>
             <span><a href="aboutmemore.html">About Me</a></span>
