Tambahkan font Lato

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!--Box di sebelah kiri-->
       <div class="left-column">
         <div class="box1">
-        <img src="assets/littleme.jpg" alt="Zahratunnisa">
+        <img src="assets/myphoto.jpg" alt="Zahratunnisa">
           <div class="box1-content">
             <h3>About Me</h3>
             <p>My name is Zahratunnisa. I graduated in Chemical Engineering in 2022 from Mulawarman University in Samarinda. I have worked for approximately three years in a swasta company in Balikpapan as a laboratory analyst. In the midst of my career, I discovered a new passion in the IT world. <br>
