--- a/pages/myproject.html
+++ b/pages/myproject.html
@@ -26,7 +26,7 @@
             <span><a href="/index.html">Home</a></span>
             <span><a href="aboutmemore.html">About Me</a></span>
             <span><a href="myproject.html">My Project</a></span>
-            <span><a href="">Reach me On</a></span>
+            <span><a href="contact.html">Reach me On</a></span>
         </nav>
 
     </header>
@@ -56,7 +56,7 @@
 
 </section>
 
-<footer>
+  <footer>
     <section class="footer-content">
       <div class="f-desc">
       <h2>Zahratunnisa</h2>
@@ -66,10 +66,10 @@
       <div class="f-links">
       <h2>Quick Links</h2>
         <ul>
-           <li>Home</li>
-          <li>About Me</li>
-          <li>My Project</li>
-          <li>Reach Me On</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="/pages/aboutmemore.html">About Me</a></li>
+          <li><a href="/pages/myproject.html" >Project</a></li>
+          <li><a href="/pages/contact.html">Reach Me On</a></li>
         </ul>
       </div>
 
@@ -93,7 +93,6 @@
       </div>
     </section>
   </footer> 
-
 
 </body>
 </html>
