--- a/pages/aboutmemore.html
+++ b/pages/aboutmemore.html
@@ -4,98 +4,90 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Profil Zahra</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="index.css">
+
+  <link rel="stylesheet" href="/pages/index.css">
+  <link rel="stylesheet" href="/pages/aboutmemore.css">
 </head>
-<body class="bg-gray-100 text-gray-800 flex flex-col min-h-screen">
+<body>
 
-  <!-- Header full width -->
-  <header class="w-full bg-blue-600 text-white flex items-center justify-between p-4">
-    <h3 class="text-xl font-bold">Zahratunnisa</h3>
-    <nav class="space-x-4">
-      <a href="/index.html" class="font-semibold hover:bg-blue-700 px-3 py-1 rounded">Home</a>
-      <a href="/pages/aboutmemore.html" class="font-semibold hover:bg-blue-700 px-3 py-1 rounded">About Me</a>
-      <a href="/pages/myproject.html" class="font-semibold hover:bg-blue-700 px-3 py-1 rounded">My Project</a>
-      <a href="/pages/contact.html" class="font-semibold hover:bg-blue-700 px-3 py-1 rounded">Reach Me On</a>
-    </nav>
-  </header>
+  <header class="header">
+        <h3>Zahratunnisa</h3>
 
+        <!-- BURGER MENU CSS-ONLY -->
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <!-- END BURGER -->
+
+        <nav class="navbar">
+            <span><a href="/index.html">Home</a></span>
+            <span><a href="/pages/aboutmemore.html">About Me</a></span>
+            <span><a href="/pages/myproject.html">My Project</a></span>
+            <span><a href="/pages/contact.html">Reach me On</a></span>
+        </nav>
+    </header>
   <!-- Konten utama di tengah -->
-  <main class="flex-1 max-w-6xl w-full mx-auto p-6 flex flex-col gap-10">
+  <main>
 
-<section class="grid grid-cols-1 md:grid-cols-[250px_1fr] gap-6 bg-white p-6 rounded-xl shadow-md">
-  <!-- Gambar -->
-  <img src="assets/Tempat-wisata-di-Bali.jpg" 
-       alt="Foto Profil" 
-       class="w-full rounded-lg md:row-span-2 object-cover md:min-h-[400px]">
+    <!-- Grid Profil -->
+    <section class="profile-grid">
+        <img src="/assets/myphoto.jpg" 
+            alt="Foto Profil" class="profile-img">
 
-  <!-- Judul -->
-  <h2 class="text-2xl font-bold mb-2 md:col-start-2 md:row-start-1">Tentang Saya</h2>
-<br>
-<br>
-  <!-- Paragraf 1 -->
-  <p class="md:col-start-2 md:row-start-1 break-words">
-    My name is Zahratunnisa. I graduated in Chemical Engineering in 2022 from Mulawarman University in Samarinda. I have worked for approximately three years in a swasta company in Balikpapan as a laboratory analyst. In the midst of my career, I discovered a new passion in the IT world. 
-  </p>
+        <div class="profile-text">
+            <h2>Tentang Saya</h2>
 
-  <!-- Paragraf 2 -->
-  <p class="md:col-start-2 md:row-start-2 break-words">
-    I was initially amazed at how the world, especially daily life, has become easier because the presence of great software on our mobile phones, start from  e-banking, e-commerce, online motorcycle taxis, cashless payments like Q-RIS, and many more. I wondered how to create such a great application like that. I really wanted to have the ability to create applications that could simplify our daily lives. I searched for ways, studied on my own through the internet, but it felt like it wasn't enough. Until finally, in middle of 2025, I discovered Revo-U and decided to take the FSSE 2025 to deepen my knowledge.
-  </p>
-</section>
+            <p>
+                My name is Zahratunnisa. I graduated in Chemical Engineering in 2022 from Mulawarman University in Samarinda. I have worked for approximately three years in a swasta company in Balikpapan as a laboratory analyst. In the midst of my career, I discovered a new passion in the IT world. 
+            </p>
 
-
-    <!-- Grid Informasi -->
-    <section class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-lg font-semibold mb-2">Hobi</h3>
-        <p>Membaca, coding, mendesain halaman web sederhana.</p>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-lg font-semibold mb-2">Kemampuan</h3>
-        <p>HTML, CSS dasar, dan sedang belajar Tailwind.</p>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-lg font-semibold mb-2">Cita-cita</h3>
-        <p>Ingin mahir web development dan UI/UX design.</p>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow-md">
-        <h3 class="text-lg font-semibold mb-2">Kontak</h3>
-        <p>Email: zahra@example.com</p>
-      </div>
+            <p>
+                I was initially amazed at how the world, especially daily life, has become easier because the presence of great software on our mobile phones, start from  e-banking, e-commerce, online motorcycle taxis, cashless payments like Q-RIS, and many more. I wondered how to create such a great application like that. I really wanted to have the ability to create applications that could simplify our daily lives. I searched for ways, studied on my own through the internet, but it felt like it wasn't enough. Until finally, in middle of 2025, I discovered Revo-U and decided to take the FSSE 2025 to deepen my knowledge.
+            </p>
+        </div>
     </section>
-
   </main>
 
-  <!-- Footer full width -->
-  <footer class="w-full bg-blue-600 text-white p-6 flex flex-col md:flex-row justify-between gap-6">
-    <div>
-      <h2 class="text-lg font-bold">Zahratunnisa</h2>
-      <p>Let's make connection and tell me about what you need</p>
-    </div>
-    <div>
-      <h2 class="text-lg font-bold mb-2">Quick Links</h2>
-      <ul class="space-y-1">
-        <li><a href="index.html" class="hover:underline">Home</a></li>
-        <li><a href="/pages/aboutmemore.html" class="hover:underline">About Me</a></li>
-        <li><a href="/pages/myproject.html" class="hover:underline">Project</a></li>
-        <li><a href="/pages/contact.html" class="hover:underline">Reach Me On</a></li>
-      </ul>
-    </div>
-    <div>
-      <h2 class="text-lg font-bold mb-2">Follow Us</h2>
-      <div class="flex flex-col gap-2">
-        <a href="https://github.com/zahratunnisa1" target="_blank" class="flex items-center gap-2 hover:underline">
-          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="w-6 h-6">
-          <span>zahratunnisa1</span>
-        </a>
-        <a href="https://www.linkedin.com/in/zahratunnisa-953881212/" target="_blank" class="flex items-center gap-2 hover:underline">
-          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="w-6 h-6">
-          <span>Zahratunnisa.</span>
-        </a>
-      </div>
-    </div>
-  </footer>
+    <footer>
+        <section class="footer-content">
+        <div class="f-desc">
+        <h2>Zahratunnisa</h2>
+            <p>Let's make connection and tell me about what you need</p>
+        </div>
+
+        <div class="f-links">
+        <h2>Quick Links</h2>
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="/pages/aboutmemore.html">About Me</a></li>
+            <li><a href="/pages/myproject.html" >Project</a></li>
+            <li><a href="/pages/contact.html">Reach Me On</a></li>
+            </ul>
+        </div>
+
+        <div>
+            <h2>Follow Us</h2>
+            <div class="f-sosmed">
+                <a href="https://github.com/zahratunnisa1" target="_blank"            style="display:inline-block;">
+                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
+                    alt="GitHub" 
+                    style="width:30px; height:30px; vertical-align:middle;">
+                    <h4 style="display:inline; margin-left:8px;">zahratunnisa1</h4>
+                </a>
+            
+                <a href="https://www.linkedin.com/in/zahratunnisa-953881212/" target="_blank"          style="display:inline-block;">
+                <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" 
+                    alt="LinkedIn" 
+                    style="width:30px; height:30px; vertical-align:middle;">
+                    <h4 style="display:inline; margin-left:8px;">Zahratunnisa.</h4>
+                </a>
+            </div>
+        </div>
+    </section>
+  </footer> 
 
 </body>
 </html>
