--- a/pages/myproject.html
+++ b/pages/myproject.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My project</title>
 
+        <link rel="stylesheet" href="../index.html">
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="myproject.css">
-        <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <header class="header">
