Perbaiki css & grid

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>  
     
       <!--Box di sebelah kanan-->
-      <aside class="right-column">
+      <div class="left-right-box">
         <div class="box2">
           <img src="assets/connection.png" alt="Connection">
           <div class="box2-content">
@@ -64,11 +64,11 @@
         </div>
 
         <div class="box3">
-          <img src="assets/travel.jpg" alt="Unknown">
+          <img src="assets/bali.jpg" alt="Destination-plan">
           <h3>Unknown</h3>
           <p>Discover the serene beauty of the ocean and golden sands.</p>
         </div>
-      </aside>
+      </div>
     </section>
 
   <footer>
