--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="box3">
           <img src="assets/bali.jpg" alt="Destination-plan">
-          <h3>Unknown</h3>
+          <h3>Plan your Holiday</h3>
           <p>Discover the serene beauty of the ocean and golden sands.</p>
         </div>
       </div>
